# SMTM-Show-Me-The-Money-

./: .gitignore  README.md  pyproject.toml  run_ui.py
configs/: live.dry-run.example.json  simulation.example.json
data/: sample_krw_btc_1m.csv
src/smtm/: __init__.py  analyzer.py  cli.py  data_provider.py  exceptions.py  live_trading.py  mass_simulator.py  models.py  operator.py  ports.py  repository.py  risk.py  strategies.py  trader.py  ui.py  utils.py
src/smtm/web/: app.js  index.html  styles.css
tests/: test_data_provider.py  test_live_trading.py  test_operator.py  test_risk.py  test_trader.py  test_ui.py
